@@ -1,4 +1,5 @@
 setOldClass("family")
+setOldClass("mcmc.list")
 setOldClass("polr")
 setOldClass("bugs")
 setOldClass("terms")
